--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/main.ts",
     "start": "node dist/main.js",
-    "build": "tsc"
+    "prebuild": "tsc",
+    "build": "tsc-alias"
   },
   "keywords": [],
   "author": "",
@@ -14,14 +15,15 @@
   "dependencies": {
     "axios": "1.12.2",
     "express": "5.1.0",
-    "openmeteo": "^1.2.1",
-    "redis": "^5.8.3",
+    "openmeteo": "1.2.1",
+    "redis": "5.8.3",
     "typescript": "5.9.3"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
+    "@types/axios": "0.9.36",
     "@types/express": "5.0.3",
     "@types/node": "24.6.2",
+    "tsc-alias": "1.8.16",
     "tsx": "4.20.6"
   }
 }
